# factorio-starcraft-assettool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  factorio-starcraft-tool.sln
factorio-starcraft-tool/: anim.cpp  anim.h  casc.cpp  casc.h  cimg.cpp  cimg.h  cimg_extensions.cpp  cimg_extensions.h  cimg_utils.cpp  cimg_utils.h  cimglist_plugin.h  convert.cpp  convert.h  convert_anim.cpp  convert_anim.h  convert_lit.cpp  convert_lit.h  convert_tiles.cpp  convert_tiles.h  factorio-starcraft-tool.vcxproj  factorio-starcraft-tool.vcxproj.filters  grp.cpp  grp.h  image_predefs.cpp  image_predefs.h  lua_writer.cpp  lua_writer.h  main.cpp  packages.config  progress.cpp  progress.h  sound_predefs.cpp  sound_predefs.h  stopwatch.cpp  stopwatch.h  tile_predefs.cpp  tile_predefs.h  vector_util.h
